Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96374

Inactive Qt::Tool window with Qt::FramelessWindowHint flag does not show custom cursor

XMLWordPrintable

    • macOS
    • faffaa729 (dev), a080fc9f8 (dev), e474d27e9 (6.5), 70ad3df7e (6.5)

      If the widget is set like this

      the_window2 = new QWidget(this);
      the_window2->setWindowFlags(Qt::Tool | Qt::FramelessWindowHint | Qt::WindowDoesNotAcceptFocus);
      the_window2->setCursor(Qt::OpenHandCursor);
      

      and when the widget is inactive(some other window is activated by the click),
      it does not show the custom cursor.

      See the video attached.
      Actual behavior : QTBUG96374-activate_setcursor.mov

      If Qt::FramelessWindowHint is not defined, everything works fine.
      See QTBUG96374-activate_setcursor_no_flag.mov

      How to reproduce :
      1. Use qtbug96374.zip
      2. Hover the mouse over the widgets like shown in QTBUG96374-activate_setcursor.mov .

      This works fine on Windows.

        1. QTBUG96374-activate_setcursor.mov
          403 kB
          Nahomi Gröhn
        2. QTBUG96374-activate_setcursor_no_flag.mov
          222 kB
          Nahomi Gröhn
        3. qtbug96374.zip
          4 kB
          Nahomi Gröhn
        For Gerrit Dashboard: QTBUG-96374
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            nagrohn Nahomi Gröhn (Inactive)
            Votes:
            3 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes